@@ -11,6 +11,7 @@
   * New DSL method (override_column) to override a specific column config without influencing other columns' order/presence.
   * Grid's title is set to model's pluralized name by default.
   * New :read_only option for FormPanel - makes all fields read-only and removes the "Apply" button.
+  * FormPanel implements DSL shortcuts for the following options in default config: :model, :items, :record_id.
 
 * API changes
   * Skip supporting ModelExtensions. The preferred way is using setters and getters on columns/fields.
